* Core: fixed various layout bugs (Recent template, index.css) [Bug 3707]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8957 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/core/css/index.css
+++ b/Themes/core/css/index.css
@@ -1543,6 +1543,7 @@ form#infocenter_login ul.horizlist label
 	padding: 0.5em 0.5em 0.1em 0.5em;
 	margin: 0;
 	border-bottom: none;
+	font-weight: normal !important;
 }
 #message_index_jump_to
 {
